--- a/index.html
+++ b/index.html
@@ -39,4 +39,14 @@
                             <div class="player-current-score" id="current-1">0</div>
                         </div>
                     </div>	
-                   
+                    <div class="rules-panel" style="display:none">
+                        <h3>Gameplay</h3>
+                        <p>On a turn, a player rolls the die repeatedly until either:</p>
+                        <li>1 is rolled</li>
+                        <li>The player chooses to hold (stop rolling)</li>
+                        <br>
+                        <p>If the player chooses to hold, all of the points rolled during that turn are added to his or her score.</p>
+                    <button class="btn-back"><i class="ion-ios-arrow-left color-0"></i>Back to game</button>	
+                    </div>
+                </div>
+               
