--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                     <button class="btn-hold"><i class="ion-ios-download-outline icon color-0"></i>Hold</button>
                     <img src="1-dice-5.png" alt="Dice" class="dice">
                 </div>
-                    
+                <script src="./js/scripts.js"></script>
+            </body>
+            </html>
             </div>
             
